gitops/clusters/oci-a1/gaegaeting-dev/account-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: gaegaeting-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: account
        resources:
          requests:
            cpu: 25m
            memory: 512Mi
          limits:
            memory: 1Gi
