gitops/clusters/oci-a1/gaegaeting-dev/account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: gaegaeting-dev
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  replicas: 0
  selector:
    matchLabels: &id001
      app.kubernetes.io/name: account
      app.kubernetes.io/part-of: gaegaeting
  template:
    metadata:
      labels: *id001
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: account
        image: ghcr.io/kangjuhyup/gaegaeting/account:sha-317f550e3fb4fbd773a606c1d58293e3cf7cb32d@sha256:ef64ce4d78bf8381d3d8dc8d29b536723806f4c8a8e9c7206728d3c347f97a11
        ports:
        - name: http
          containerPort: 2800
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /account/health
            port: http
          failureThreshold: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /account/health
            port: http
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /account/health
            port: http
          periodSeconds: 20
          failureThreshold: 3
        volumeMounts:
        - name: db-ca
          mountPath: /etc/database
          readOnly: true
      volumes:
      - name: db-ca
        secret:
          secretName: gaegaeting-db-ca
