gitops/clusters/oci-a1/gaegaeting-dev/edge-proxy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-proxy
  namespace: gaegaeting-dev
spec:
  replicas: 0
  template:
    spec:
      containers:
      - name: envoy
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
