gitops/clusters/oci-a1/gaegaeting-dev/integration-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-ui
  namespace: gaegaeting-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: integration-ui
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 128Mi
