gitops/clusters/oci-a1/gaegaeting-dev/integration-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-ui
  namespace: gaegaeting-dev
  annotations:
    argocd.argoproj.io/sync-wave: '20'
spec:
  replicas: 0
  selector:
    matchLabels: &id001
      app.kubernetes.io/name: integration-ui
      app.kubernetes.io/part-of: gaegaeting
  template:
    metadata:
      labels: *id001
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: integration-ui
        image: ghcr.io/kangjuhyup/gaegaeting/integration-ui:sha-317f550e3fb4fbd773a606c1d58293e3cf7cb32d@sha256:b34f5c6f981bbf5dca9ceb896b3ab535b72ed644bc26136e5f4e51c0eebd5ed6
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 20
          failureThreshold: 3
