gitops/clusters/oci-a1/gaegaeting-dev/match-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match
  namespace: gaegaeting-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: match
        resources:
          requests:
            cpu: 25m
            memory: 512Mi
          limits:
            memory: 1Gi
