gitops/clusters/oci-a1/gaegaeting-dev/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gaegaeting-dev
  annotations:
    argocd.argoproj.io/sync-wave: '-10'
spec:
  selector:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: gaegaeting
  ports:
  - name: http
    port: 4000
    targetPort: http
