gitops/clusters/oci-a1/gaegaeting-dev/match-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match
  namespace: gaegaeting-dev
  annotations:
    argocd.argoproj.io/sync-wave: '-10'
spec:
  selector:
    app.kubernetes.io/name: match
    app.kubernetes.io/part-of: gaegaeting
  ports:
  - name: http
    port: 2801
    targetPort: http
