gitops/clusters/oci-a1/gaegaeting-dev/match-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: match-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: match
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gateway
    ports:
    - protocol: TCP
      port: 2801
