gitops/clusters/oci-a1/gaegaeting-dev/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: account-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: account
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: edge-proxy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: match
    ports:
    - protocol: TCP
      port: 2800
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: match-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: match
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gateway
    ports:
    - protocol: TCP
      port: 2801
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: edge-proxy
    ports:
    - protocol: TCP
      port: 4000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-authz-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: edge-authz
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gaegaeting-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: edge-proxy
    ports:
    - protocol: TCP
      port: 4010
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: integration-ui-ingress
  namespace: gaegaeting-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: integration-ui
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - protocol: TCP
      port: 8080
